tests/baselines/reference/parserIndexMemberDeclaration6.errors.txt
==== tests/cases/conformance/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration6.ts (1 errors) ====
    class C {
       static [x: string]: string;
       ~~~~~~
!!! error TS1145: Modifiers not permitted on index signature members.
    }